--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "An API to run openFoam simulations.",
   "main": "index.js",
   "scripts": {
+    "start" : "node api/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
